# edge-config-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: arg_parser.hpp  cli_options.hpp  config_loader.hpp  config_parser.hpp  load_result.hpp  parse_result.hpp
src/: arg_parser.cpp  config_loader.cpp  config_parser.cpp  main.cpp
tests/: test_arg_parser.cpp  test_basic.cpp  test_config_loader.cpp
